--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
     </div>
 
     <footer>
-        <p>&copy; 2021 CSS Flexbox</p>
-        <p>Desenvolvido por: Ingridh Nunes de Oliveira</p>
+        <div class="flex-container footer">
+            <p>&copy; 2021 CSS Flexbox |</p>
+            <p> | Desenvolvido por: Ingridh Nunes de Oliveira</p>
+        </div>
     </footer>
 </body>
 </html>
